Move zgc test from ring-http-exchange to httpserver
update depeendencies for ring-http-exchange